tests/compile_fail/dynify_with_unsupported_item.rs
#[dynify::dynify]
fn test1() {}

#[dynify::dynify]
fn test2() -> FakeImpl {}

#[dynify::dynify]
opaque_trait!();

fn main() {}
