tests/compile_fail/dynify_with_unsupported_item.stderr
error: input function must return an `impl` type
 --> tests/compile_fail/dynify_with_unsupported_item.rs:2:4
  |
2 | fn test1() {}
  |    ^^^^^

error: input function must return an `impl` type
 --> tests/compile_fail/dynify_with_unsupported_item.rs:5:4
  |
5 | fn test2() -> FakeImpl {}
  |    ^^^^^

error: expected a `fn` or `trait` item
 --> tests/compile_fail/dynify_with_unsupported_item.rs:8:1
  |
8 | opaque_trait!();
  | ^^^^^^^^^^^^^^^^
